infra/k8s/banking-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banking
  template:
    metadata:
      labels:
        app: banking
    spec:
      containers:
        - name: banking
          image: ismummy/banking
---
apiVersion: v1
kind: Service
metadata:
  name: banking-srv
spec:
  selector:
    app: banking
  ports:
    - name: banking
      protocol: TCP
      port: 3000
      targetPort: 3000
